# aurelia

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aurelia_cf_pusher.py  aurelia_coordinator.py  aurelia_diplomacy.py  aurelia_factory.py  causal_run.py  deep_seed.py  migrate_schema.py  populate_npcs.py  pyproject.toml  world_daemon_template.py
colab/: aurelia_speed_run.ipynb  speed_run.py
configs/: arkos.yaml  mirithane.yaml  solara.yaml  valdris.yaml  verge.yaml
docs/: ARCHITECTURE.md  AURELIA_CANON_AND_DATA_GUIDE.md  AURELIA_COUNTERFACTUALS.md  AURELIA_LORE_READERS_START_HERE.md  AURELIA_PHASE13_NARRATIVE.md  AURELIA_RESEARCH_START_HERE.md  AURELIA_WIKI_RECONCILIATION_REVIEW.md  DEMO.md  HUGGINGFACE_PUBLISH.md  PHASE13_VERIFIED_CHRONICLES.md  PROJECT_STATUS_2026-06-11.md  PROJECT_STATUS_2026-06-12.md  PROJECT_STATUS_2026-06-12_PHASE13.md  ROADMAP.md  SOCIAL_PROOF.md  diplomatic-matrix.md  phase-1-meaningful-npc-tick.md  phase-2-federation-event-bus.md  phase-3-diplomacy-trigger-engine.md  type-politics.md  world-sociology.md
examples/: 01_load_aurelia_hf_datasets.py  02_reproduce_density_diversification.py  03_trace_causal_chain.py  04_run_counterfactual_branch.py  05_run_density_diversification_grid.py  aurelia_dataset_loader.py
prompts/: chronicle_v1.txt
scripts/: aurelia_run_inspect.py  backfill_federation_tables.py  compare_run_demographics.py  compare_runs.py  evaluate_phase8_run.py  evaluate_run_quality.py  explain_event.py  export_causal_graph.py  export_hf_dataset.py  plot_density_diversification.py  reconcile_public_surfaces.py  render_hf_readme.py  (+6 more)
(+304 files in other folders)
